tests/baselines/reference/namespaceImportTypeQuery3.errors.txt
/a.ts(1,24): error TS2792: Cannot find module './z'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== /a.ts (1 errors) ====
    import type { A } from './z'; // unresolved
                           ~~~~~
!!! error TS2792: Cannot find module './z'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const A = 0;
    export { A };
    export class B {};
    
==== /b.ts (0 errors) ====
    import * as types from './a';
    let t: typeof types = {
      A: undefined as any, // ok
      B: undefined as any,
    }
    